<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.ddmsoftware.periodictable.ResultActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="7"
            android:rowCount="13"
            android:layout_margin="2dp">

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:id="@+id/imgResultInfo"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_rowSpan="4"
                android:src="@drawable/h"
                 />

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="1"
                android:layout_row="0"
                android:layout_rowSpan="5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/tvResult_Info1"
                android:layout_row="0"
                android:layout_column="2"
                android:textStyle="bold"
                android:layout_columnSpan="5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvResult_LatinName"
                android:id="@+id/textView"
                android:layout_row="2"
                android:layout_column="2"
                android:textStyle="bold"
                android:paddingRight="3dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/tvResult_Info2"
                android:layout_column="3"
                android:layout_row="2" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="4"
                android:layout_row="0"
                android:layout_rowSpan="6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/tvResult_Info3"
                android:layout_column="2"
                android:layout_row="1"
                android:layout_columnSpan="5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvResultGroupName"
                android:id="@+id/tvResultGroupName"
                android:layout_row="3"
                android:layout_column="2"
                android:textStyle="bold"
                android:paddingRight="3dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/tvResult_Info4"
                android:layout_column="3"
                android:layout_row="3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvResultPeriod"
                android:id="@+id/textView3"
                android:layout_row="3"
                android:layout_column="5"
                android:textStyle="bold"
                android:paddingRight="3dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/tvResult_info5"
                android:layout_row="3"
                android:layout_column="6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvAtomicWeight"
                android:id="@+id/textView4"
                android:layout_row="4"
                android:layout_column="2"
                android:textStyle="bold"
                android:paddingRight="3dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/tvResult_info6"
                android:layout_row="4"
                android:layout_column="3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvResultDensity"
                android:id="@+id/textView5"
                android:layout_row="4"
                android:layout_column="5"
                android:textStyle="bold"
                android:paddingRight="3dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/tvResult_info7"
                android:layout_row="4"
                android:layout_column="6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvResultPontoFusao"
                android:id="@+id/textView6"
                android:layout_row="5"
                android:layout_column="2"
                android:textStyle="bold"
                android:paddingRight="3dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/tvResult_info8"
                android:layout_row="5"
                android:layout_column="3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvResultPontoEbulicao"
                android:id="@+id/textView2"
                android:textStyle="bold"
                android:layout_column="5"
                android:layout_row="5"
                android:paddingRight="3dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/tvResult_info9"
                android:layout_column="6"
                android:layout_row="5" />

        </GridLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgBtnBack"
                android:src="@drawable/back"
                android:background="@color/background_material_light"
                android:layout_margin="8dp"
                android:layout_weight="1" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgBtnWiki"
                android:src="@drawable/wiki"
                android:background="@color/background_material_light"
                android:layout_margin="8dp"
                android:layout_weight="1" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton3"
                android:src="@drawable/share"
                android:background="@color/background_material_light"
                android:layout_margin="8dp"
                android:layout_weight="1" />

        </LinearLayout>


        <com.google.android.gms.ads.AdView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_TESTE"
            android:id="@+id/adViewResult"
            android:layout_gravity="center_horizontal" />


    </LinearLayout>

</RelativeLayout>
